<resources>
    <string name="app_name">My Application</string>
    <string name="menu_main">Witaj wodzu!</string>
    <string name="new_route">Nowa Trasa</string>
    <string name="history">Historia Tras</string>
    <string name="settings">Ustawienia</string>
    <string name="data_text">Dystans: 0 km | Czas: 0 min | Śr. prędkość: 0 km/h</string>
    <string name="route_nr">Trasa #</string>


    <string name="start_time_label">Godzina startu:&#160;</string>
    <string name="end_time_label">Godzina zakończenia:&#160;</string>
    <string name="distance_label">Dystans:&#160;</string>
    <string name="duration_label">Czas trwania:&#160;</string>
    <string name="avg_speed_label">Średnia prędkość:&#160;</string>
    <string name="accelerations_label">Gwałtowne przyspieszenia:&#160;</string>
    <string name="brakings_label">Gwałtowne hamowania:&#160;</string>

    <string name="current_speed_label">Aktualna prędkość:&#160;</string>


    <string name="route_details">Szczegóły trasy</string>
    <string name="back">Powrót</string>
    <string name="time_placeholder">--:--</string>
    <string name="velocity_placeholder">0.00 km</string>
    <string name="speed_placeholder">0.00 km/h</string>
    <string name="duration_placeholder">00:00</string>
    <string name="useless_placeholder">opis</string>
    <string name="zero_placeholder">0</string>


    <string name="stop">Stop</string>
    <string name="start">Start</string>

    <string name="map_view">Widok mapy</string>

    <string name="follow_me">Wyśrodkuj</string>

    <string name="accelerometer_test">Test akcelerometru</string>
    <string name="vibration">Wibracje</string>
    <string name="change_profile_picture">Zmień zdjęcie profilowe</string>
    <string name="theme_mode">Ciemny motyw</string>

    <string name="change_photo">Zmień zdjęcie</string>
    <string name="profile_picture">Zdjęcie profilowe</string>
    <string name="start_test">Rozpocznij test</string>

    <string name="accel_x">X: 0.00 m/s²</string>
    <string name="accel_y">Y: 0.00 m/s²</string>
    <string name="accel_z">Z: 0.00 m/s²</string>

    <string name="accekerometer_test">Test Akcelerometru</string>
    <string name="resting">Spoczynek</string>
    <string name="toogle_start_stop">Start/Stop</string>


</resources>
