<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Nagłówek -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accekerometer_test"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <!-- Status wykrywania akcelerometru -->
    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resting"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- Wartości XYZ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel_x"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel_y"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel_z"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <!-- Przycisk Start/Stop -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardStartStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/buttonStartStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="start|center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sensor"
                android:contentDescription="@string/toogle_start_stop"/>

            <TextView
                android:id="@+id/textStartStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_test"
                android:textSize="18sp"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- PRZYCISK POWROTU -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="start|center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back"/>

            <TextView
                android:id="@+id/textBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="18sp"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
